--- a/source/_posts/跨平台/代码统计工具实测点评.md
+++ b/source/_posts/跨平台/代码统计工具实测点评.md
@@ -3,6 +3,7 @@ title: 代码统计工具实测点评
 date: 2016-09-26 16:52:07
 categories: 实用工具
 img: /images/20160926.jpg
+top: true
 tags:
   - 实用工具
   - 代码统计
@@ -131,21 +132,21 @@ java -jar statsvn.jar svn.log local_project
 
 ## 4. Diffcount
 ### 4.1. 相关说明：
-**diffcount**代码行差异统计工具，用于比较两个代码包的新增，修改，删除的代码量.资源挺好的，统计出来的结果和我自己统计的有些差异。可以统计的文件类型有些少，而且偏后端语言。另外，在windows下使用的时候，直接敲命令行即可。
+`diffcount`代码行差异统计工具，用于比较两个代码包的新增，修改，删除的代码量.资源挺好的，统计出来的结果和我自己统计的有些差异。可以统计的文件类型有些少，而且偏后端语言。另外，在windows下使用的时候，直接敲命令行即可。
 
 ### 4.2. 主要功能：
 1. 差异统计：统计某一个版本的代码包相对于一个原始的基线代码包，变动的代码量，以及变动的代码量中各语言非空非注释行(NBNC)的结果；
 2. 代码统计：如果需要，可以把diffcount当作普通的代码行统计工具，统计一个代码包；
-**diffcount**命令行方式的编译是直接通过Makefile进行的，目前提供Linux,Cygwin,Windows(MinGW)三种环境下的编译脚本，其他环境中，如果需要编译和使用，请通过修改Makefile文件进行。
+`diffcount`命令行方式的编译是直接通过Makefile进行的，目前提供Linux,Cygwin,Windows(MinGW)三种环境下的编译脚本，其他环境中，如果需要编译和使用，请通过修改Makefile文件进行。
 
-**diffcount**的可执行程序名为 **diffcount.exe**
+`diffcount`的可执行程序名为 `diffcount.exe`
 
-想查询参数信息，请使用 **diffcount --help** 查询帮助
+想查询参数信息，请使用 `diffcount --help` 查询帮助
  
-**diffcount --cn-help** 可以查询中文帮助， 也可以查看doc下的"命令行参数说明.txt"
+`diffcount --cn-help` 可以查询中文帮助， 也可以查看doc下的"命令行参数说明.txt"
 
 ### 4.3. 参数说明：
-**diffcount**的参数说明：
+`diffcount`的参数说明：
 
 使用方法: 
 ```java
@@ -206,20 +207,20 @@ diffcount [OPTION]... (Baseline) Target
 
 统计某一个版本的代码包相对于一个原始的基线代码包，变动的代码量以及变动的代码量中各语言非空非注释行(NBNC)的结果
 
-**diffcount** 缺省执行的就是差异统计，直接跟上两个代码包的目录即可
+`diffcount` 缺省执行的就是差异统计，直接跟上两个代码包的目录即可
 
-在**diffcount**目录下执行：
+在`diffcount`目录下执行：
 ```java
 diffcount test\sp1 test\sp2
 ```
 实际使用中，可能会有文件名和目录名大小写不一致的情况，如果希望忽略文件名大小写的差异，需要使用 --ignore-case参数，否则两个一样的文件，一个会算作删除，一个会算作新增
 ![](代码统计工具实测点评/20160927141326402.png)
 
-**ADD MOD DEL A&M BLK CMT NBNC RATE** 的 含义分别为：**新增、修改、删除、新增+修改、空行、注释、非空非注释行、标准C折算率**
+`ADD MOD DEL A&M BLK CMT NBNC RATE` 的 含义分别为：`新增、修改、删除、新增+修改、空行、注释、非空非注释行、标准C折算率`
 
 #### 4.4.2. 代码统计：
 
-如果需要，可以把**diffcount**当作普通的代码行统计工具，统计一个代码包
+如果需要，可以把`diffcount`当作普通的代码行统计工具，统计一个代码包
 
 代码统计使用 -c (或者--count-only)参数,在diffcount目录下执行
 ```java
@@ -231,7 +232,7 @@ diffcount -c  test\count
  
 ### 4.5. 实测点评：
 
-**Diffcount** 主要功能包括代码统计和差异统计，代码统计操作通过命令式方式操作，总体操作还算简单，适合开发者操作，代码统计相对于上面其他三个没特别优势，如果是想用差异统计推荐使用**Diffcount**。
+`Diffcount` 主要功能包括代码统计和差异统计，代码统计操作通过命令式方式操作，总体操作还算简单，适合开发者操作，代码统计相对于上面其他三个没特别优势，如果是想用差异统计推荐使用`Diffcount`。
 
 
 
